--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -51,7 +51,7 @@
                     <article class="menu-item">
                         <div class="item">
                             <div class="info">
-                                <div>
+                                <div class="text">
                                     <h4>Fricassée d'escargot</h4>
                                     <p>Au piment d'espelette</p>
                                 </div>
