--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -64,7 +64,7 @@
                     <article class="menu-item">
                         <div class="item">
                             <div class="info">
-                                <div>
+                                <div class="text">
                                     <h4>Foie gras</h4>
                                     <p>Et ses copeaux de truffe noire</p>
                                 </div>
@@ -77,7 +77,7 @@
                     <article class="menu-item">
                         <div class="item">
                             <div class="info">
-                                <div>
+                                <div class="text">
                                     <h4>Oeuf au plat</h4>
                                     <p>Assaisonné à la truffe sur lit de poireaux</p>
                                 </div>
@@ -95,7 +95,7 @@
                         <article class="menu-item">
                             <div class="item">
                                 <div class="info">
-                                    <div>
+                                    <div class="text">
                                         <h4>Filet de boeuf aux herbes</h4>
                                         <p>Accompagné de sa ribambelle de légumes</p>
                                     </div>
@@ -108,7 +108,7 @@
                         <article class="menu-item">
                             <div class="item">
                                 <div class="info">
-                                    <div>
+                                    <div class="text">
                                         <h4>Parmentier de queue de boeuf</h4>
                                         <p>À la truffe noire sur sa purée de panais</p>
                                     </div>
@@ -121,7 +121,7 @@
                         <article class="menu-item">
                             <div class="item">
                                 <div class="info">
-                                    <div>
+                                    <div class="text">
                                         <h4>Filet de Turbot</h4>
                                         <p>Aux agrumes</p>
                                     </div>
@@ -138,7 +138,7 @@
                     <article class="menu-item">
                         <div class="item">
                             <div class="info">
-                                <div>
+                                <div class="text">
                                     <h4>Paris-Brest</h4>
                                     <p>Revisité</p>
                                 </div>
@@ -151,7 +151,7 @@
                     <article class="menu-item">
                         <div class="item">
                             <div class="info">
-                                <div>
+                                <div class="text">
                                     <h4>Macaron au chocolat d'exception</h4>
                                     <p>Et glace à la vanille de Madagascar</p>
                                 </div>
@@ -164,7 +164,7 @@
                     <article class="menu-item">
                         <div class="item">
                             <div class="info">
-                                <div>
+                                <div class="text">
                                     <h4>Mousse au chocolat</h4>
                                     <p>Au piment d'espelette et à la truffe noire</p>
                                 </div>
