modifications a la francais  et le delice des sens

--- a/a-la-française.html
+++ b/a-la-française.html
@@ -30,7 +30,7 @@
 
     <main>
         <div>
-            <img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="plat du restaurant À la française">
+            <img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="img-carte" alt="plat du restaurant À la française">
         </div>    
         
         <div class="carte">
