--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -22,19 +22,25 @@
 
     <header>
         <div>
-            <a href="/accueil.html">
+            <a class="lien-accueil" href="./accueil.html">
                 <i class="fa-arrow-left fas"></i>
             </a>
-            <img src="images/ohmyfood.png" alt="logo de l'entreprise">
+            <h1>ohmyfood</h1>
         </div>
     </header>
 
     <main>
-        <img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="plat du restaurant Le délice des sens">
-
         <div>
-            <h2>Le délice des sens</h2>
-            <i class="fa-heart far"></i>
+            <img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="img-carte" alt="plat du restaurant Le délice des sens">
+        </div>
+
+        <div class="carte">
+            <h2 class="title-restaurant">La palette du goût</h2>
+            <label class="position-heart">
+                <input class="checkbox" type="checkbox" />
+                <i class="fa-heart far unchecked"></i>
+                <i class="fa-heart fas checked"></i>
+            </label>
         </div>
         <div>
             <section>
