modifications mail toutes les pages

--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -42,22 +42,21 @@
                 <i class="fa-heart fas checked"></i>
             </label>
         </div>
-        <div>
-            <section>
+
+        <div class="background-carte">
+            <section class="sous-menu padding-top-desktop">
                 <h3>ENTRÉES</h3>
-                <div>
-                    <article>
-                        <div>
-                            <h4>Tartare de thon</h4>
-                            <p>Assaisonné au yuzu</p>
-                        </div>
-                        <div>
-                            <p>25€</p>
-                        </div>
-                        <div>
-                            <div>
-                                <i class="fa-check fas"></i>
+                <hr class="trait" type='text/css'>
+                    <article class="menu-item">
+                        <div class="item">
+                            <div class="info">
+                                <div class="text">
+                                    <h4>Tartare de thon</h4>
+                                    <p>Assaisonné au yuzu</p>
+                                </div>
+                                <span class="prix-menu">25€</span>
                             </div>
+                            <span class="check"><i class="fas fa-check-circle"></i></span>
                         </div>
                     </article>
 
@@ -222,7 +221,7 @@
                     </a>
                 </li>
                 <li class="item2"><a href="#">Mentions légales</a></li>
-                <li class="item3"><a href="#">Contact</a></li>
+                <li class="item3"><a href="mailto:ohmyfood@contact.fr">Contact</a></li>
             </ul>
         </div>
 
