--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     </a>
                 </li>
                 <li class="item2"><a href="#">Mentions légales</a></li>
-                <li class="item3"><a href="#">Contact</a></li>
+                <li class="item3"><a href="mailto:ohmyfood@contact.fr">Contact</a></li>
             </ul>
         </div>
 
