modification retour page accueil

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -24,7 +24,7 @@
 
     <header>
         <div>
-            <a class="lien-accueil" href="./accueil.html">
+            <a class="lien-accueil" href="./index.html">
                 <i class="fa-arrow-left fas"></i>
             </a>
             <h1>ohmyfood</h1>
