--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -22,7 +22,7 @@
 
     <header>
         <div>
-            <a class="lien-accueil" href="./accueil.html">
+            <a class="lien-accueil" href="./index.html">
                 <i class="fa-arrow-left fas"></i>
             </a>
             <h1>ohmyfood</h1>
