changement button accueil

--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
             <div class="background">
                 <h2>Réservez le menu qui vous convient</h2>
                 <p class="subtitle-reservation">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-                <a class="btn-recherche" href="#">
-                    <button type="submit">
+                <div class="btn-recherche">
+                    <button onclick="window.location.href = #">
                         <span class="btn">Explorer nos retaurants</span>
-                </a>
+                    </button>
+                </div>
             </div>
         </section>
 
