modification label en div

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
             <div class="background">
                 <h2>Réservez le menu qui vous convient</h2>
                 <p class="subtitle-reservation">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-                <div class="btn-recherche">
-                    <button onclick="window.location.href = #">
+                <form style="display:inline" action="#" method="get" class="btn-recherche">
+                    <button>
                         <span class="btn">Explorer nos retaurants</span>
                     </button>
-                </div>
+                </form>
             </div>
         </section>
 
@@ -91,11 +91,12 @@
                                     <h3>La palette du goût</h3>
                                     <p>Ménimontant</p>
                                 </div>
-                                <label class="margin-bottom">
-                                    <input class="checkbox" type="checkbox" />
+                                <div class="margin-bottom">
+                                    <input class="checkbox" type="checkbox">
                                     <i class="fa-heart far unchecked"></i>
                                     <i class="fa-heart fas checked"></i>
-                                </label>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </a>
@@ -111,11 +112,11 @@
                                     <h3>La note enchantée</h3>
                                     <p>Charonne</p>
                                 </div>
-                                <label class="margin-bottom">
+                                <div class="margin-bottom">
                                     <input class="checkbox" type="checkbox" />
                                     <i class="fa-heart far unchecked"></i>
                                     <i class="fa-heart fas checked"></i>
-                                </label>
+                                </div>
                             </div>
                         </div>
                     </a>
@@ -129,11 +130,11 @@
                                     <h3>À la française</h3>
                                     <p>Cité Rouge</p>
                                 </div>
-                                <label class="margin-bottom">
+                                <div class="margin-bottom">
                                     <input class="checkbox" type="checkbox" />
                                     <i class="fa-heart far unchecked"></i>
                                     <i class="fa-heart fas checked"></i>
-                                </label>
+                                </div>
                             </div>
                         </div>
                     </a>
@@ -146,11 +147,11 @@
                                     <h3>Le délice des sens</h3>
                                     <p>Folie-Méricourt</p>
                                 </div>
-                                <label class="margin-bottom">
+                                <div class="margin-bottom">
                                     <input class="checkbox" type="checkbox" />
                                     <i class="fa-heart far unchecked"></i>
                                     <i class="fa-heart fas checked"></i>
-                                </label>
+                                </div>
                             </div>
                         </div>
                     </a>
