changement la note enchanté

--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
                                     <h3>La palette du goût</h3>
                                     <p>Ménimontant</p>
                                 </div>
-                                <div class="margin-bottom">
-                                    <input class="checkbox" type="checkbox">
+                                <label class="margin-bottom">
+                                    <input class="checkbox" type="checkbox" />
                                     <i class="fa-heart far unchecked"></i>
                                     <i class="fa-heart fas checked"></i>
-                                </div>
+                                </label>
                             </div>
                         </div>
                     </a>
@@ -111,11 +111,11 @@
                                     <h3>La note enchantée</h3>
                                     <p>Charonne</p>
                                 </div>
-                                <div class="margin-bottom">
+                                <label class="margin-bottom">
                                     <input class="checkbox" type="checkbox" />
                                     <i class="fa-heart far unchecked"></i>
                                     <i class="fa-heart fas checked"></i>
-                                </div>
+                                </label>
                             </div>
                         </div>
                     </a>
@@ -129,11 +129,11 @@
                                     <h3>À la française</h3>
                                     <p>Cité Rouge</p>
                                 </div>
-                                <div class="margin-bottom">
+                                <label class="margin-bottom">
                                     <input class="checkbox" type="checkbox" />
                                     <i class="fa-heart far unchecked"></i>
                                     <i class="fa-heart fas checked"></i>
-                                </div>
+                                </label>
                             </div>
                         </div>
                     </a>
@@ -146,11 +146,11 @@
                                     <h3>Le délice des sens</h3>
                                     <p>Folie-Méricourt</p>
                                 </div>
-                                <div class="margin-bottom">
+                                <label class="margin-bottom">
                                     <input class="checkbox" type="checkbox" />
                                     <i class="fa-heart far unchecked"></i>
                                     <i class="fa-heart fas checked"></i>
-                                </div>
+                                </label>
                             </div>
                         </div>
                     </a>
