--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -46,7 +46,7 @@
         <div class="background-carte">
             <section class="sous-menu padding-top-desktop">
                 <h3>ENTRÉES</h3>
-                <hr class="trait" type='text/css'>
+                <hr class="trait">
                     <article class="menu-item">
                         <div class="item">
                             <div class="info">
@@ -102,7 +102,7 @@
 
             <section class="sous-menu padding-top">
                 <h3>PLATS</h3>
-                <hr class="trait" type='text/css'>
+                <hr class="trait">
                     <article class="menu-item">
                         <div class="item">
                             <div class="info">
@@ -146,7 +146,7 @@
 
             <section class="sous-menu padding-top">
                 <h3>DESSERTS</h3>
-                <hr class="trait" type='text/css'>
+                <hr class="trait">
                     <article class="menu-item">
                         <div class="item">
                             <div class="info">
@@ -189,11 +189,11 @@
         </div>
         
         <div class="background-btn">
-            <a href="#">
-            <button class="btn-commander">
-                <span>Commander</span>
-            </button>
-            <a>
+            <form style="display:inline" action="#" method="get" class="btn-recherche">
+                <button class="taille2">
+                    <span>Commander</span>
+                </button>
+            </form>
         </div>
 
     </main>
