--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -47,7 +47,7 @@
         <div class="background-carte">
             <section class="sous-menu padding-top-desktop">
                 <h3>ENTRÉES</h3>
-                <hr class="trait" type='text/css'>
+                <hr class="trait">
                     <article class="menu-item">
                         <div class="item">
                             <div class="info">
@@ -91,7 +91,7 @@
             
                 <section class="sous-menu padding-top">
                     <h3>PLATS</h3>
-                    <hr class="trait" type='text/css'>
+                    <hr class="trait">
                         <article class="menu-item">
                             <div class="item">
                                 <div class="info">
@@ -134,7 +134,7 @@
 
             <section class="sous-menu padding-top">
                 <h3>DESSERTS</h3>
-                <hr class="trait" type='text/css'>
+                <hr class="trait">
                     <article class="menu-item">
                         <div class="item">
                             <div class="info">
@@ -177,12 +177,13 @@
         </div>
 
         <div class="background-btn">
-            <a href="#">
-            <button class="btn-commander">
-                <span>Commander</span>
-            </button>
-            <a>
+            <form style="display:inline" action="#" method="get" class="btn-recherche">
+                <button class="taille2">
+                    <span>Commander</span>
+                </button>
+            </form>
         </div>
+        
     </main>
 
     <footer>
