--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -46,7 +46,7 @@
         <div class="background-carte">
             <section class="sous-menu padding-top-desktop">
                 <h3>ENTRÉES</h3>
-                <hr class="trait" type='text/css'>
+                <hr class="trait">
                     <article class="menu-item">
                         <div class="item">
                             <div class="info">
@@ -89,7 +89,7 @@
 
                 <section class="sous-menu padding-top">
                     <h3>PLATS</h3>
-                    <hr class="trait" type='text/css'>
+                    <hr class="trait">
                         <article class="menu-item">
                             <div class="item">
                                 <div class="info">
@@ -132,7 +132,7 @@
                    
                 <section class="sous-menu padding-top">
                     <h3>DESSERTS</h3>
-                    <hr class="trait" type='text/css'>
+                    <hr class="trait">
                         <article class="menu-item">
                             <div class="item">
                                 <div class="info">
@@ -174,15 +174,15 @@
                 </section>
             </div>
                     
-        <div class="background-btn">
-            <a href="#">
-            <button class="btn-commander">
-                <span>Commander</span>
-            </button>
-            <a>
-        </div>
+            <div class="background-btn">
+                <form style="display:inline" action="#" method="get" class="btn-recherche">
+                    <button class="taille2">
+                        <span>Commander</span>
+                    </button>
+                </form>
+            </div>
 
-    </main>
+        </main>
 
     <footer>
         <div class="container">
