--- a/a-la-française.html
+++ b/a-la-française.html
@@ -45,7 +45,7 @@
         <div class="background-carte">
             <section class="sous-menu padding-top-desktop">
                 <h3>ENTRÉES</h3>
-                <hr class="trait" type='text/css'>
+                <hr class="trait">
                     <article class="menu-item">
                         <div class="item">
                             <div class="info">
@@ -88,7 +88,7 @@
 
             <section class="sous-menu padding-top">
                 <h3>PLATS</h3>
-                <hr class="trait" type='text/css'>
+                <hr class="trait">
                     <article class="menu-item">
                         <div class="item">
                             <div class="info">
@@ -131,7 +131,7 @@
 
             <section class="sous-menu padding-top">
                 <h3>DESSERTS</h3>
-                <hr class="trait" type='text/css'>
+                <hr class="trait">
                     <article class="menu-item">
                         <div class="item">
                             <div class="info">
@@ -174,11 +174,11 @@
         </div>
               
         <div class="background-btn">
-            <a href="#">
-            <button class="btn-commander">
-                <span>Commander</span>
-            </button>
-            <a>
+            <form style="display:inline" action="#" method="get" class="btn-recherche">
+                <button class="taille2">
+                    <span>Commander</span>
+                </button>
+            </form>
         </div>
 
     </main>
