--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                 <h2 class="title">Restaurants</h2>
                 <div>
                     <div class="restaurants-desktop">
+                        <div class="menu-carte-container">
                     <a class="menu-carte" href="la-palette-du-gout.html">
                         <div class="background-carte">
                             <img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="img-menu" alt="plat du restaurant La palette du goût">
@@ -91,15 +92,20 @@
                                     <h3>La palette du goût</h3>
                                     <p>Ménimontant</p>
                                 </div>
-                                <label class="margin-bottom">
+                                <div class="margin-bottom">
                                     <input class="checkbox" type="checkbox" />
                                     <i class="fa-heart far unchecked"></i>
                                     <i class="fa-heart fas checked"></i>
-                                </label>
+                                </div>
                             </div>
                         </div>
                     </a>
-                    
+                    <div class="margin-bottom">
+                        <input class="checkbox" type="checkbox" />
+                        <i class="fa-heart far unchecked"></i>
+                        <i class="fa-heart fas checked"></i>
+                    </div>
+                </div>
                         
 
                     <a class="menu-carte" href="la-note-enchantee.html">
