--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <h2 class="title">Restaurants</h2>
                 <div>
                     <div class="restaurants-desktop">
-                    <div class="menu-carte" href="la-palette-du-gout.html">
+                    <a class="menu-carte" href="la-palette-du-gout.html">
                         <div class="background-carte">
                             <img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="img-menu" alt="plat du restaurant La palette du goût">
                             <span class="nouveau">Nouveau</span>
@@ -98,7 +98,7 @@
                                 </label>
                             </div>
                         </div>
-                    </div>
+                    </a>
                         
 
                     <a class="menu-carte" href="la-note-enchantee.html">
