--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 </a>
                                 <div class="description-menu">
                                     <a href="la-palette-du-gout.html">
-                                        <div>
+                                        <div class="description-text">
                                             <h3>La palette du goût</h3>
                                             <p>Ménimontant</p>
                                         </div>
@@ -116,7 +116,7 @@
                                 </a>
                                 <div class="description-menu">
                                     <a href="la-note-enchantee.html">
-                                        <div>
+                                        <div class="description-text">
                                             <h3>La note enchantée</h3>
                                             <p>Charonne</p>
                                         </div>
@@ -142,7 +142,7 @@
                                 </a>
                                 <div class="description-menu">
                                     <a href="a-la-française.html">
-                                    <div>
+                                    <div class="description-text">
                                         <h3>À la française</h3>
                                         <p>Cité Rouge</p>
                                     </div>
@@ -166,7 +166,7 @@
                                 </a>
                                 <div class="description-menu">
                                     <a href="le-delice-des-sens.html">
-                                        <div>
+                                        <div class="description-text">
                                             <h3>Le délice des sens</h3>
                                             <p>Folie-Méricourt</p>
                                         </div>
@@ -190,7 +190,7 @@
     </main>
 
     <footer>
-        
+
         <div class="container">
             <div>
                 <img src="images/ohmyfood-blanc.png" class="logo-footer" alt="logo de l'entreprise">
