--- a/index.html
+++ b/index.html
@@ -90,19 +90,17 @@
                                     <span class="nouveau">Nouveau</span>
                                 </a>
                                 <div class="description-menu">
-                                    <a href="la-palette-du-gout.html">
-                                        <div class="description-text">
+                                    <a class="width100" href="la-palette-du-gout.html">
+                                        <div>
                                             <h3>La palette du goût</h3>
                                             <p>Ménimontant</p>
                                         </div>
                                     </a>
-                                    <form>
-                                        <label class="margin-bottom">
-                                            <input class="checkbox" type="checkbox" />
-                                            <i class="fa-heart far unchecked"></i>
-                                            <i class="fa-heart fas checked"></i>
-                                        </label>
-                                    </form>
+                                    <label class="margin-bottom">
+                                        <input class="checkbox" type="checkbox" />
+                                        <i class="fa-heart far unchecked"></i>
+                                        <i class="fa-heart fas checked"></i>
+                                    </label>
                                 </div>
                             </div>
                         </div>
@@ -115,19 +113,17 @@
                                     <span class="nouveau">Nouveau</span>
                                 </a>
                                 <div class="description-menu">
-                                    <a href="la-note-enchantee.html">
-                                        <div class="description-text">
+                                    <a class="width100" href="la-note-enchantee.html">
+                                        <div>
                                             <h3>La note enchantée</h3>
                                             <p>Charonne</p>
                                         </div>
                                     </a>
-                                    <form>
-                                        <label class="margin-bottom">
-                                            <input class="checkbox" type="checkbox" />
-                                            <i class="fa-heart far unchecked"></i>
-                                            <i class="fa-heart fas checked"></i>
-                                        </label>
-                                    </form>
+                                    <label class="margin-bottom">
+                                        <input class="checkbox" type="checkbox" />
+                                        <i class="fa-heart far unchecked"></i>
+                                        <i class="fa-heart fas checked"></i>
+                                    </label>
                                 </div>
                             </div>
                         </div>
@@ -141,19 +137,17 @@
                                     <img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="img-menu" alt="plat du restaurant À la française">
                                 </a>
                                 <div class="description-menu">
-                                    <a href="a-la-française.html">
-                                    <div class="description-text">
+                                    <a class="width100" href="a-la-française.html">
+                                    <div>
                                         <h3>À la française</h3>
                                         <p>Cité Rouge</p>
                                     </div>
                                 </a>
-                                <form>
-                                    <label class="margin-bottom">
-                                        <input class="checkbox" type="checkbox" />
-                                        <i class="fa-heart far unchecked"></i>
-                                        <i class="fa-heart fas checked"></i>
-                                    </label>
-                                </form>
+                                <label class="margin-bottom">
+                                    <input class="checkbox" type="checkbox" />
+                                    <i class="fa-heart far unchecked"></i>
+                                    <i class="fa-heart fas checked"></i>
+                                </label>
                                 </div>
                             </div>
                         </div>
@@ -165,19 +159,17 @@
                                     <img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="img-menu" alt="plat du restaurant Le délice des sens">
                                 </a>
                                 <div class="description-menu">
-                                    <a href="le-delice-des-sens.html">
-                                        <div class="description-text">
+                                    <a class="width100" href="le-delice-des-sens.html">
+                                        <div>
                                             <h3>Le délice des sens</h3>
                                             <p>Folie-Méricourt</p>
                                         </div>
                                     </a>
-                                   <form>
-                                        <label class="margin-bottom">
-                                            <input class="checkbox" type="checkbox" />
-                                            <i class="fa-heart far unchecked"></i>
-                                            <i class="fa-heart fas checked"></i>
-                                        </label>
-                                    </form>
+                                    <label class="margin-bottom">
+                                        <input class="checkbox" type="checkbox" />
+                                        <i class="fa-heart far unchecked"></i>
+                                        <i class="fa-heart fas checked"></i>
+                                    </label>
                                 </div>
                             </div>
                         </div>
