ajout du code qui manquait

--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -36,7 +36,7 @@
 
         <div class="carte">
             <h2 class="title-restaurant">La note enchantée</h2>
-            <label>
+            <label class="position-heart">
                 <input class="checkbox" type="checkbox" />
                 <i class="fa-heart far unchecked"></i>
                 <i class="fa-heart fas checked"></i>
